--- a/Files/Daniel/Day 5/nexus/nexus/src/main/resources/templates/fragments/general.html
+++ b/Files/Daniel/Day 5/nexus/nexus/src/main/resources/templates/fragments/general.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <body>
 
     <header th:fragment="myHeader(activeTab)">
         <nav>
             <span style="color:white; font-size: 1.2rem; margin-right:20px;">NEXUS CORP</span>
-            
-            <a th:href="@{/}" 
-               th:classappend="${activeTab == 'home'} ? 'active'">Home</a>
-            
-            <a th:href="@{/team}" 
-               th:classappend="${activeTab == 'team'} ? 'active'">Team Directory</a>
+
+            <a th:href="@{/}" th:classappend="${activeTab == 'home'} ? 'active'">Home</a>
+
+            <a th:href="@{/team}" th:classappend="${activeTab == 'team'} ? 'active'">Team Directory</a>
         </nav>
 
-        <nav th:fragment="sidebar"></nav>
+        <div th:fragment="sidebar(sidebarContent)">
+            <div th:replace="${sidebarContent}"></div>
+        </div>
+
     </header>
+
+
+    <hr />
 
     <footer th:fragment="myFooter">
         <p>&copy; 2024 Nexus Corp Intranet. All rights reserved.</p>
     </footer>
 
 </body>
+
 </html>
