bert day 5 afternoon

--- a/Files/bert/Day5/DevLaunch/src/main/resources/templates/home.html
+++ b/Files/bert/Day5/DevLaunch/src/main/resources/templates/home.html
@@ -9,6 +9,12 @@
 <nav>
     <a th:href="@{/about}">About Me</a>
     <a th:href="@{/inventory}">Inventory</a>
+    <a th:href="@{/dashboard}">Travel Dashboard</a>
+    <a th:href="@{/register}">Register</a>
+    <a th:href="@{/signup}">Sign Up</a>
+    <a th:href="@{/fragments}">Fragments</a>
+    <a th:href="@{/team}">Team Directory</a>
+    <a th:href="@{/polyglot}">Polyglot</a>
 </nav>
 
 
